salesforce-port/force-app/main/default/objects/Trip_Reservation__c/Trip_Reservation__c.object-meta.xml
<CustomObject>
    <label>Trip Reservation</label>
    <nameField>
        <displayFormat>RES-{000000}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip Reservations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>