salesforce-port/force-app/main/default/objects/Trip_Reservation__c/fields/Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Confirmation__c</fullName>
    <label>Confirmation</label>
    <type>Text</type>
    <length>255</length>
</CustomField>