salesforce-port/force-app/main/default/objects/Trip_Reservation__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>