salesforce-port/force-app/main/default/objects/Trip_Reservation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Flight</fullName><default>true</default><label>Flight</label></value>
            <value><fullName>Hotel</fullName><default>false</default><label>Hotel</label></value>
            <value><fullName>Car</fullName><default>false</default><label>Car</label></value>
            <value><fullName>Rail</fullName><default>false</default><label>Rail</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>